--- a/BookStoreApi/Solutis.csproj
+++ b/BookStoreApi/Solutis.csproj
@@ -11,6 +11,8 @@
 
     <PackageReference Include="Evolve" Version="2.4.0" />
 
+    <PackageReference Include="FluentValidation" Version="9.5.1" />
+
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning.ApiExplorer" Version="4.1.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="3.1.2" />
