string de conexão em arquivo de configuração

--- a/BookStoreApi/appsettings.json
+++ b/BookStoreApi/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "MySQLConnection": {
+    "MySQLConnection": "Server=auditoria-server.mysql.database.azure.com; Port=3306; Database=dataBase_solutis; Uid=admin_auditoria; Pwd=Auditoria2022; SslMode=Preferred;",
+    "ConnectionRoot": "Server=localhost;DataBase=dataBase_solutis;Uid=root;Pwd=root"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
