--- a/BookStoreApi/Solutis.csproj
+++ b/BookStoreApi/Solutis.csproj
@@ -6,13 +6,9 @@
      <NoWarn>$(NoWarn);1591</NoWarn>
   </PropertyGroup>
 
-
   <ItemGroup>
-
     <PackageReference Include="Evolve" Version="2.4.0" />
-
     <PackageReference Include="FluentValidation" Version="9.5.1" />
-
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning.ApiExplorer" Version="4.1.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="3.1.2" />
@@ -34,9 +30,7 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.5.0" />
     <PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="5.5.0" />
     <PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="5.5.0" />
-
+    <PackageReference Include="prometheus-net.AspNetCore" Version="5.0.1" />
+    <PackageReference Include="prometheus-net.DotNetRuntime" Version="4.4.0" />
   </ItemGroup>
-
-
-
 </Project>
