--- a/loki-config.yaml
+++ b/loki-config.yaml
@@ -23,7 +23,7 @@ ingester:
 
 schema_config:
   configs:
-    - from: 2020-10-24
+    - from: "2020-10-24"
       store: boltdb-shipper
       object_store: filesystem
       schema: v11
