--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -28,6 +28,12 @@ steps:
     platform: '$(buildPlatform)'
     configuration: '$(buildConfiguration)'
 
+- task: DotNetCoreCLI@2
+  inputs:
+    command: 'restore'
+    projects: '/*.csproj'
+    feedsToUse: 'select'
+
 - task: VSTest@2
   inputs:
     platform: '$(buildPlatform)'
